# pam-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
pam/: Cargo.toml  README.tpl
pam-http/: Cargo.toml
pam-sober/: Cargo.toml
pam/examples/: data.rs  quiz.rs  trivial.rs  username.rs
pam/src/: constants.rs  conv.rs  items.rs  lib.rs  macros.rs  module.rs  secret.rs
pam/tests/integration/: harness.rs  main.rs  test_data.rs  test_quiz.rs  test_trivial.rs  test_username.rs
