[package]
name = "pam-bindings"
description = "Simplified PAM module creation in Rust"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
authors = [
    "Anthony Nowell <anowell@gmail.com>",
    "Lukas Velikov <velikovlukas@gmail.com>",
]
repository = "https://github.com/lvkv/pam-rs"
homepage = "https://github.com/lvkv/pam-rs"
readme = "../README.md"
license-file = "../LICENSE"
keywords = ["pam", "ffi", "linux", "authentication"]
categories = ["authentication", "security", "os", "external-ffi-bindings"]

[lib]
name = "pam"
path = "src/lib.rs"

[dependencies]
libc = "0.2.97"

[dev-dependencies]
tempfile = "3"

[[example]]
name = "username"
crate-type = ["cdylib"]

[[example]]
name = "trivial"
crate-type = ["cdylib"]

[[example]]
name = "quiz"
crate-type = ["cdylib"]

[[example]]
name = "data"
crate-type = ["cdylib"]
